examples/negative/parser_syntax/taxon_reserved_ident.kai
# Negative fixture (parser): `taxon` is a reserved keyword and can no
# longer be used as an identifier. Binding it with `let` must be
# rejected with an "expected pattern" diagnostic anchored at the word.

fn main() : Int {
  let taxon = 1
  taxon
}
